@@ -1,3 +1,10 @@
+2009-08-21  Sven Herzberg  <sven@lanedo.com>
+
+	About: NB#89864 - [AF Checked] RGBA support
+
+	* engine/sapwood-pixmap.c (sapwood_pixmap_render_rects_internal):
+	restore the original behavior to respect the alpha bitmask
+
 2009-08-20  Christian Dywan  <christian@lanedo.com>
 
 	NB#118393 - Crop images if they are supposed to be rendered too small
